# corriere-scraper

./: .env  .env.example  .gitignore  Cargo.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
public/: index.html
src/: main.rs
